# profile.mobile.platform.core.security.cert-svc-ui

./: .gitignore  AUTHORS  CMakeLists.txt  NOTICE  build.sh  cert-svc-ui.xml  cert-svc-ui.xml.in
cert-selection-ug/: CMakeLists.txt
cert-selection-ug-test/: CMakeLists.txt  cert-selection-ug-test.c
cert-selection-ug/include/: cert-selection-uigadget.h
cert-selection-ug/src/: cert-selection-uigadget.c  cert-selection.c
common/: CMakeLists.txt
common/include/: common-utils.h  mgr-app-common-debug.h  mgr-app-common-error.h  mgr-app-common-util.h  mgr-app-view-manager.h  mgr-app-widget.h
common/src/: common-utils.c  mgr-app-common-util.c  mgr-app-view-manager.c  mgr-app-widget.c
data/: CMakeLists.txt
data/edc/: mgr-app.edc  ug-setting-manage-certificates-efl.edc
data/icons/: custom_editfield.edj
debian/: changelog  changelog.app  changelog.ug  com.samsung.mgr-app.desktop.in  com.samsung.mgr-app.postinst.in  control  control.app  control.ug  libcert-svc-dev.install  libcert-svc1-test.install  libcert-svc1-ui.install  libcert-svc1.dirs  libcert-svc1.install  libcert-svc1.links  libcert-svc1.postinst  rules
packaging/: cert-svc-ui.changes  cert-svc-ui.manifest  cert-svc-ui.spec  ug.cert-svc-ui.include
po/: CMakeLists.txt  ar.po  as.po  az.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_MX.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  (+41 more)
ug/: CMakeLists.txt
ug/include/: mgr-app-uigadget.h
ug/include/certificates/: certificate_util.h  certificates.h
ug/src/: certificate_util.c  certificates_menu.c  detail_info_cert.c  mgr-app-uigadget.c  put_password_certificate.c
ug/src/pfx_cert/: pfx_cert.c  pfx_cert_install.c  pfx_cert_remove.c
ug/src/trusted_root_ca_cert/: trusted_root_ca_cert.c
view/: CMakeLists.txt
view/include/certificates/: certificate_util.h  certificates.h
view/src/certificates/: certificate_util.c  certificates_menu.c  detail_info_cert.c  put_password_certificate.c  uninstall_certificate.c
view/src/certificates/pfx_cert/: pfx_cert.c  pfx_cert_install.c  pfx_cert_remove.c
view/src/certificates/trusted_root_ca_cert/: trusted_root_ca_cert.c
view/src/certificates/user_cert/: install_certificate.c  user_cert.c
