CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(setting-manage-certificates-efl C)

INCLUDE(FindPkgConfig)

STRING(REGEX MATCH "([^.]*)" SO_VERSION "${VERSION}")

SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_CCOV "-O2 -Wall --coverage")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(LIBDIR "${PREFIX}/lib")

SET(RESDIR "${PREFIX}/res")
SET(DATADIR "${RESDIR}/etc")
SET(LOCALEDIR "${RESDIR}/locale")
SET(ICONDIR "${RESDIR}/images")
SET(EDJDIR "${RESDIR}/edje")
SET(IMGDIR "${RESDIR}/images")

SET(TARGET_CERT_VIEW "ug-mgr-cert-view")
SET(TARGET_CERT_SELECTION_UG "ug-cert-selection-ug-efl")
SET(TARGET_CERT_MANAGER_UG "ug-setting-manage-certificates-efl")

ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DEDJDIR=\"${EDJDIR}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DDATADIR=\"${DATADIR}\"")
ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
ADD_DEFINITIONS("-DEDJDIR=\"${EDJDIR}\"")
ADD_DEFINITIONS("-DIMGDIR=\"${IMGDIR}\"")
ADD_DEFINITIONS("-DCERTSVC_UI_IMG_PATH=\"${IMGDIR}/cert-svc-ui\"")
ADD_DEFINITIONS("-DCUSTOM_EDITFIELD_PATH=\"${RESDIR}/custom_editfield.edj\"")

#ADD_DEFINITIONS("-DHAVE_WAYLAND")
#ADD_DEFINITIONS("-DWAYLAND")
ADD_DEFINITIONS("-DUG_WAYLAND")

SET(CMAKE_INSTALL_RPATH "${LIBDIR}")
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)

ADD_SUBDIRECTORY(view)
ADD_SUBDIRECTORY(ug)
ADD_SUBDIRECTORY(cert-selection-ug)
ADD_SUBDIRECTORY(po)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/icons/00_icon_select_all.png DESTINATION ${IMGDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/icons/00_nocontents_text_gray.png DESTINATION ${IMGDIR}/cert-svc-ui)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/cert-svc-ui.xml DESTINATION ${TZ_SYS_SHARE}/packages)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/data/icons/custom_editfield.edj DESTINATION ${RESDIR})
