CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ug-setting-manage-certificates-efl C)

INCLUDE(FindPkgConfig)

STRING(REGEX MATCH "([^.]*)" SO_VERSION "${VERSION}")

SET(CMAKE_C_FLAGS_RELEASE "-O2 -Wall")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -g -ggdb")
SET(CMAKE_C_FLAGS_CCOV "-O2 -Wall --coverage")

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(LIBDIR "${PREFIX}/lib")
SET(RESDIR "${PREFIX}/res")

SET(LOCALEDIR "${RESDIR}/locale")
SET(EDJDIR    "${RESDIR}/edje")
SET(IMGDIR    "${RESDIR}/images")
SET(ICONDIR   ${IMGDIR})

SET(TARGET_CERT_MANAGER_UG     ${PROJECT_NAME})
SET(TARGET_CERT_SELECTION_UG   "ug-cert-selection-ug-efl")
SET(TARGET_CERT_VIEW           "ug-mgr-cert-view")

IF (CMAKE_BUILD_TYPE MATCHES "DEBUG")
ADD_DEFINITIONS("-DTIZEN_DEBUG_ENABLE")
ADD_DEFINITIONS("-DBUILD_TYPE_DEBUG")
ADD_DEFINITIONS("-DDPL_LOGS_ENABLED")
ENDIF (CMAKE_BUILD_TYPE MATCHES "DEBUG")

ADD_DEFINITIONS("-DPACKAGE=\"${PROJECT_NAME}\"")
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DEDJDIR=\"${EDJDIR}\"")
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DRESDIR=\"${RESDIR}\"")
ADD_DEFINITIONS("-DLOCALEDIR=\"${LOCALEDIR}\"")
ADD_DEFINITIONS("-DEDJDIR=\"${EDJDIR}\"")
ADD_DEFINITIONS("-DIMGDIR=\"${IMGDIR}\"")

SET(CMAKE_INSTALL_RPATH "${LIBDIR}")
SET(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
ADD_DEFINITIONS("-DUG_WAYLAND")

ADD_SUBDIRECTORY(ug)
ADD_SUBDIRECTORY(cert-selection-ug)
ADD_SUBDIRECTORY(po)

INSTALL(FILES
		data/icons/00_icon_select_all.png
		data/icons/00_nocontents_text_gray.png
	DESTINATION ${ICONDIR}
)

CONFIGURE_FILE(cert-svc-ui.xml.in cert-svc-ui.xml @ONLY)

INSTALL(FILES data/icons/custom_editfield.edj DESTINATION ${RESDIR})
INSTALL(FILES cert-svc-ui.xml DESTINATION ${TZ_SYS_RO_PACKAGES})
